--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.4",
+    "bootstrap": "^4.5.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -38,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify-icons/bx": "^1.1.0",
+    "@iconify-icons/eva": "^1.1.0",
+    "@iconify-icons/zmdi": "^1.1.0",
+    "@iconify/react": "^1.1.3"
   }
 }
